Implement the isSupported method and make plugins work again. There was an issue where accessing the static methods in DefaultControllerEnvironment and ControllerEnvironment would cause ploblems when the plugins were loaded using the PluginLoader class loader.
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@187 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/build.xml
+++ b/build.xml
@@ -83,6 +83,23 @@
 		<iterate target="javadoc"/>
 	</target>
 
+	<target name="pluginTest" depends="dist" description="Build plugin version">
+		<mkdir dir="dist"/>
+		<mkdir dir="dist/controller"/>
+		<copy todir="dist">
+			<fileset file="coreAPI/bin/jinput-core.jar"/>
+			<fileset file="coreAPI/bin/jinput-test.jar"/>
+			<fileset file="plugins/DX8/lib/jutils.jar"/>
+		</copy>
+		<copy todir="dist/controller">
+			<fileset dir="plugins/awt/bin"/>
+			<fileset dir="plugins/linux/bin"/>
+			<fileset dir="plugins/OSX/bin"/>
+			<fileset dir="plugins/windows/bin"/>
+			<fileset dir="plugins/wintab/bin"/>
+		</copy>
+	</target>
+	
     <target name="dist" depends="init" description="Build the distribution file for this system">
 		<iterate target="all"/>
         <mkdir dir="dist"/>
