--- a/plugins/windows/src/native/build.xml
+++ b/plugins/windows/src/native/build.xml
@@ -3,10 +3,12 @@
 <project name="JInput dx8 port, Native code" basedir="." default="compile">
 	<property environment="env"/>
 	<property name="dxhome" location="${env.DXSDK_DIR}"/>
-	<property name="sdkhome" location="${env.MSSDk}"/>
+	<property name="sdkhome" location="c:\Program Files\Microsoft Platform SDK for Windows Server 2003 R2"/>
 
 	<target name="compile_dir">
 		<echo message="${compiledir}"/>
+		<echo message="sdkhome: ${sdkhome}"/>
+		<echo message="dxhome: ${dxhome}"/>
 		<apply dir="${compiledir}" failonerror="true" executable="cl" dest="${compiledir}" skipemptyfilesets="true">
 			<arg line="/Ox /Wp64 /W2 /nologo /c"/>
 			<arg value="/I${sdkhome}\include"/>
@@ -28,7 +30,7 @@
 			<srcfile/>
 			<arg line="/Fe${dllname} /link"/>
 			<arg value="/LIBPATH:${java.home}\lib"/>
-			<arg value="/LIBPATH:${dxhome}\lib\x86"/>
+			<arg value="/LIBPATH:${dxhome}\lib"/>
 			<arg value="/LIBPATH:${sdkhome}\lib"/>
 			<arg line="/DLL ${libs}"/>
 			<fileset dir="${commonhome}/src/native" includes="*.obj"/>
