*** empty log message ***
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@213 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/applet/build.xml
+++ b/applet/build.xml
@@ -31,4 +31,14 @@
 			<fileset dir="../webstart/dist/"/>
 		</copy>
 	</target>
+
+	<target name="sign" depends="jar">
+		<input message="Input keystore alias: " addproperty="keystoreAlias"/>
+		<input message="Input keystore password: " addproperty="keystorePassword"/>
+		<signjar alias="${keystoreAlias}" keystore="../webstart/myKeyStore" storepass="${keystorePassword}" verbose="true">
+			<fileset dir="dist">
+				<include name="**/jinput-applet-test.jar"/>
+			</fileset>
+		</signjar>
+	</target>
 </project>
