*** empty log message ***
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@214 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/applet/build.xml
+++ b/applet/build.xml
@@ -29,6 +29,7 @@
 	<target name="dist" depends="jar">
 		<copy todir="dist">
 			<fileset dir="../webstart/dist/"/>
+			<fileset file="jinput.html"/>
 		</copy>
 	</target>
 
