All environment paths passed in.
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@215 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/windows/src/native/build.xml
+++ b/plugins/windows/src/native/build.xml
@@ -3,7 +3,7 @@
 <project name="JInput dx8 port, Native code" basedir="." default="compile">
 	<property environment="env"/>
 	<property name="dxhome" location="${env.DXSDK_DIR}"/>
-	<property name="sdkhome" location="c:\Program Files\Microsoft Platform SDK for Windows Server 2003 R2"/>
+	<property name="sdkhome" location="${env.WindowsSdkDir}"/>
 
 	<target name="compile_dir">
 		<echo message="${compiledir}"/>
