*** empty log message ***
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@217 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/applet/build.xml
+++ b/applet/build.xml
@@ -30,6 +30,7 @@
 		<copy todir="dist">
 			<fileset dir="../webstart/dist/"/>
 			<fileset file="jinput.html"/>
+			<fileset file="jinput-event.html"/>
 		</copy>
 	</target>
 
