--- a/plugins/OSX/src/native/build.xml
+++ b/plugins/OSX/src/native/build.xml
@@ -4,12 +4,14 @@
 
 	<target name="init">
 		<mkdir dir="ppc"/>
-		<mkdir dir="intel"/>
+		<mkdir dir="i386"/>
+		<mkdir dir="x86_64"/>
 	</target>
 	
 	<target name="clean">
 		<delete failonerror="false">
-			<fileset dir="intel"/>
+			<fileset dir="i386"/>
+			<fileset dir="x86_64"/>
 			<fileset dir="ppc"/>
 			<fileset file="libjinput-osx.jnilib"/>
 		</delete>
@@ -36,32 +38,47 @@
 	</target>
 	
 	<target name="compileNativeJinputLib" depends="init">
+		<property name="ppc_sdkroot" location="/Developer/SDKs/MacOSX10.3.9.sdk"/>
 		<property name="universal_sdkroot" location="/Developer/SDKs/MacOSX10.4u.sdk"/>
-		<property name="legacy_sdkroot" location="/Developer/SDKs/MacOSX10.3.9.sdk"/>
-		<property name="universal_flags" value="-isysroot ${universal_sdkroot} -arch i386"/>
+		<property name="x86_64_sdkroot" location="/Developer/SDKs/MacOSX10.5.sdk"/>
+		<property name="ppc_flags" value="-isysroot ${universal_sdkroot} -arch ppc -mmacosx-version-min=10.3"/>
+		<property name="universal_flags" value="-isysroot ${universal_sdkroot} -arch i386 -mmacosx-version-min=10.4"/>
+		<property name="x86_64_flags" value="-isysroot ${x86_64_sdkroot} -arch x86_64 -mmacosx-version-min=10.5"/>
 		<antcall target="compile">
-			<param name="dstdir" location="intel"/>
+			<param name="dstdir" location="ppc"/>
+			<param name="compiler" value="gcc-4.0"/>
+			<param name="sdkroot" location="${universal_sdkroot}"/>
+			<param name="cflags" value="${ppc_flags}"/>
+		</antcall>
+		<antcall target="link">
+			<param name="objdir" location="ppc"/>
+			<param name="libname" value="libjinput-osx-ppc.jnilib"/>
+			<param name="linker" value="gcc-4.0"/>
+			<param name="linkerflags" value="${ppc_flags}"/>
+		</antcall>
+		<antcall target="compile">
+			<param name="dstdir" location="i386"/>
 			<param name="compiler" value="gcc-4.0"/>
 			<param name="sdkroot" location="${universal_sdkroot}"/>
 			<param name="cflags" value="${universal_flags}"/>
 		</antcall>
 		<antcall target="link">
-			<param name="objdir" location="intel"/>
-			<param name="libname" value="libjinput-osx-intel.jnilib"/>
+			<param name="objdir" location="i386"/>
+			<param name="libname" value="libjinput-osx-i386.jnilib"/>
 			<param name="linker" value="gcc-4.0"/>
 			<param name="linkerflags" value="${universal_flags}"/>
 		</antcall>
 		<antcall target="compile">
-			<param name="dstdir" location="ppc"/>
-			<param name="compiler" value="gcc-3.3"/>
-			<param name="sdkroot" location="${legacy_sdkroot}"/>
-			<param name="cflags" value=""/>
+			<param name="dstdir" location="x86_64"/>
+			<param name="compiler" value="gcc-4.0"/>
+			<param name="sdkroot" location="${x86_64_sdkroot}"/>
+			<param name="cflags" value="${x86_64_flags}"/>
 		</antcall>
 		<antcall target="link">
-			<param name="objdir" location="ppc"/>
-			<param name="libname" value="libjinput-osx-ppc.jnilib"/>
-			<param name="linker" value="gcc-3.3"/>
-			<param name="linkerflags" value=""/>
+			<param name="objdir" location="x86_64"/>
+			<param name="libname" value="libjinput-osx-x86_64.jnilib"/>
+			<param name="linker" value="gcc-4.0"/>
+			<param name="linkerflags" value="${x86_64_flags}"/>
 		</antcall>
 		<apply dir="." parallel="true" executable="lipo" os="Mac OS X" failonerror="true" skipemptyfilesets="true" >
 			<arg value="-create"/>
@@ -69,7 +86,8 @@
 			<arg value="-output"/>
 			<arg path="libjinput-osx.jnilib"/>
 			<fileset file="ppc/libjinput-osx-ppc.jnilib"/>
-			<fileset file="intel/libjinput-osx-intel.jnilib"/>
+			<fileset file="i386/libjinput-osx-i386.jnilib"/>
+			<fileset file="x86_64/libjinput-osx-x86_64.jnilib"/>
 		</apply>
 	</target>
 </project>
