--- a/webstart/build.xml
+++ b/webstart/build.xml
@@ -17,7 +17,7 @@
 		<jar destfile="dist/jinput-windows-native.jar"
 			 basedir="../dist/" includes="jinput-dx8.dll, jinput-raw.dll, jinput-wintab.dll"/>
 		<jar destfile="dist/jinput-linux-native.jar"
-			 basedir="../dist/" includes="libjinput-linux.so"/>
+			 basedir="../dist/" includes="libjinput-linux.so, libjinput-linux64.so"/>
 		<jar destfile="dist/jinput-osx-native.jar"
 			 basedir="../dist/" includes="libjinput-osx.jnilib"/>
 	</target>
