Only build wintab stuff on windows 32 bit, which is the only environment wintab supports.
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@224 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/wintab/build.xml
+++ b/plugins/wintab/build.xml
@@ -4,7 +4,7 @@
         <mkdir dir="classes"/>
         <mkdir dir="bin"/>
         <condition property="wintab" >
-            <os family="Windows" />
+            <os family="Windows" arch="x86"/>
         </condition>
     </target>
 
