Add version information that hudson will update.
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@231 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/build.xml
+++ b/build.xml
@@ -57,6 +57,12 @@
 		</antcall>
 	</target>
 
+    <target name="versiontest" depends="init,all" description="Try running it.">
+		<antcall target="runtest">
+			<param name="mainclass" value="net.java.games.input.test.VersionTest"/>
+		</antcall>
+	</target>
+
 	<macrodef name="iterate">
 		<attribute name="target"/>
 		<sequential>
