Fix init and clean targets
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@232 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/coreAPI/build.xml
+++ b/coreAPI/build.xml
@@ -6,6 +6,7 @@
         <mkdir dir="apidocs"/> 
         <mkdir dir="classes"/> 
         <mkdir dir="bin"/> 
+    	<mkdir dir="build"/>
     </target>
 
     <target name="compile" depends="init">
@@ -56,6 +57,7 @@
 		<delete dir="classes"/>
 		<delete dir="bin"/>
 		<delete dir="apidocs"/>
+		<delete dir="build"/>
     </target>
     
     <target name="all" depends="init,jar" description="Build everything.">
