--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="Sun Games Initiative Client Technologies" basedir="." default="all" xmlns:artifact="urn:maven-artifact-ant">
 	
-	<property name="mvn.version" value="2.0.3"/>
+	<property name="mvn.version" value="2.0.4-SNAPSHOT"/>
 	<property name="maven-repository-url" value="https://oss.sonatype.org/service/local/staging/deploy/maven2/" />
 	<property name="maven-repository-id" value="sonatype-nexus-staging" />
 	
@@ -250,39 +250,43 @@
 
 		<filter token="VERSION" value="${mvn.version}"/>		
 		<copy tofile="dist/jinput-${mvn.version}.pom" filtering="true">
-			<fileset file="pom.xml"/>
+			<fileset file="jinput.pom"/>
+		</copy>
+		<copy tofile="dist/jinput-${mvn.version}-platform.pom" filtering="true">
+			<fileset file="jinput-platform.pom"/>
 		</copy>
 		
 		<artifact:pom id="jinputpomfile" file="dist/jinput-${mvn.version}.pom" />
+		<artifact:pom id="jinputplatformpomfile" file="dist/jinput-${mvn.version}-platform.pom" />
 
-		<delete file="dist/jinput-${mvn.version}-natives-windows.zip" />
-		<zip destfile="dist/jinput-${mvn.version}-natives-windows.zip">
+		<delete file="dist/jinput-natives-windows.zip" />
+		<zip destfile="dist/jinput-natives-windows.zip">
 			<fileset dir="dist/">
 				<include name="**/*.dll"/>
 			</fileset>
 		</zip>
 
-		<delete file="dist/jinput-${mvn.version}-natives-linux.zip"/>
-		<zip destfile="dist/jinput-${mvn.version}-natives-linux.zip">
+		<delete file="dist/jinput-natives-linux.zip"/>
+		<zip destfile="dist/jinput-natives-linux.zip">
 			<fileset dir="dist/">
 				<include name="**/*.so"/>
 			</fileset>
 		</zip>
 
-		<delete file="dist/jinput-${mvn.version}-natives-osx.zip"/>
-		<zip destfile="dist/jinput-${mvn.version}-natives-osx.zip" >
+		<delete file="dist/jinput-natives-osx.zip"/>
+		<zip destfile="dist/jinput-natives-osx.zip" >
 			<fileset dir="dist/">
 				<include name="**/*.jnilib"/>
 			</fileset>
 		</zip>
 
-		<delete file="dist/jinput-${mvn.version}-javadoc.zip"/>
-		<zip destfile="dist/jinput-${mvn.version}-javadoc.zip">
+		<delete file="dist/jinput-javadoc.zip"/>
+		<zip destfile="dist/jinput-javadoc.zip">
 			<fileset dir="coreAPI/apidocs/"/>
 		</zip>
 
-		<delete file="dist/jinput-${mvn.version}-sources.zip"/>
-		<zip destfile="dist/jinput-${mvn.version}-sources.zip">
+		<delete file="dist/jinput-sources.zip"/>
+		<zip destfile="dist/jinput-sources.zip">
 			<fileset dir=".">
 				<include name="**/*.java"/>
 				<include name="**/*.h"/>
@@ -298,11 +302,15 @@
 
 		<artifact:install file="dist/jinput-${mvn.version}.jar">
 			<pom refid="jinputpomfile" />
-			<attach file="dist/jinput-${mvn.version}-natives-windows.zip" classifier="natives-windows" type="zip"/>
-			<attach file="dist/jinput-${mvn.version}-natives-linux.zip" classifier="natives-linux" type="zip"/>
-			<attach file="dist/jinput-${mvn.version}-natives-osx.zip" classifier="natives-osx" type="zip"/>
-			<attach file="dist/jinput-${mvn.version}-javadoc.zip" classifier="javadoc" type="zip"/>
-			<attach file="dist/jinput-${mvn.version}-sources.zip" classifier="sources" type="zip"/>
+			<attach file="dist/jinput-javadoc.zip" classifier="javadoc" type="jar"/>
+			<attach file="dist/jinput-sources.zip" classifier="sources" type="jar"/>
+		</artifact:install>
+		
+		<artifact:install file="dist/jinput=${mvn.version}-platform.pom">
+			<pom refid="jinputplatformpomfile" />
+			<attach file="dist/jinput-natives-windows.zip" classifier="natives-windows" type="jar"/>
+			<attach file="dist/jinput-natives-linux.zip" classifier="natives-linux" type="jar"/>
+			<attach file="dist/jinput-natives-osx.zip" classifier="natives-osx" type="jar"/>
 		</artifact:install>		
 	</target>
 
@@ -320,34 +328,7 @@
 			<arg value="-Durl=${maven-repository-url}" />
 			<arg value="-DrepositoryId=${maven-repository-id}" />
 			<arg value="-DpomFile=dist/jinput-${mvn.version}.pom" />
-			<arg value="-Dfile=dist/jinput-${mvn.version}-natives-windows.zip" />
-			<arg value="-Dclassifier=natives-windows" />
-			<arg value="-Pgpg" />
-		</artifact:mvn>
-		<artifact:mvn>
-			<arg value="org.apache.maven.plugins:maven-gpg-plugin:1.1:sign-and-deploy-file" />
-			<arg value="-Durl=${maven-repository-url}" />
-			<arg value="-DrepositoryId=${maven-repository-id}" />
-			<arg value="-DpomFile=dist/jinput-${mvn.version}.pom" />
-			<arg value="-Dfile=dist/jinput-${mvn.version}-natives-linux.zip" />
-			<arg value="-Dclassifier=natives-linux" />
-			<arg value="-Pgpg" />
-		</artifact:mvn>
-		<artifact:mvn>
-			<arg value="org.apache.maven.plugins:maven-gpg-plugin:1.1:sign-and-deploy-file" />
-			<arg value="-Durl=${maven-repository-url}" />
-			<arg value="-DrepositoryId=${maven-repository-id}" />
-			<arg value="-DpomFile=dist/jinput-${mvn.version}.pom" />
-			<arg value="-Dfile=dist/jinput-${mvn.version}-natives-osx.zip" />
-			<arg value="-Dclassifier=natives-osx" />
-			<arg value="-Pgpg" />
-		</artifact:mvn>
-		<artifact:mvn>
-			<arg value="org.apache.maven.plugins:maven-gpg-plugin:1.1:sign-and-deploy-file" />
-			<arg value="-Durl=${maven-repository-url}" />
-			<arg value="-DrepositoryId=${maven-repository-id}" />
-			<arg value="-DpomFile=dist/jinput-${mvn.version}.pom" />
-			<arg value="-Dfile=dist/jinput-${mvn.version}-javadoc.zip" />
+			<arg value="-Dfile=dist/jinput-javadoc.zip" />
 			<arg value="-Dclassifier=javadoc" />
 			<arg value="-Pgpg" />
 		</artifact:mvn>
@@ -356,8 +337,35 @@
 			<arg value="-Durl=${maven-repository-url}" />
 			<arg value="-DrepositoryId=${maven-repository-id}" />
 			<arg value="-DpomFile=dist/jinput-${mvn.version}.pom" />
-			<arg value="-Dfile=dist/jinput-${mvn.version}-sources.zip" />
+			<arg value="-Dfile=dist/jinput-sources.zip" />
 			<arg value="-Dclassifier=sources" />
+			<arg value="-Pgpg" />
+		</artifact:mvn>
+		<artifact:mvn>
+			<arg value="org.apache.maven.plugins:maven-gpg-plugin:1.1:sign-and-deploy-file" />
+			<arg value="-Durl=${maven-repository-url}" />
+			<arg value="-DrepositoryId=${maven-repository-id}" />
+			<arg value="-DpomFile=dist/jinput-${mvn.version}-natives.pom" />
+			<arg value="-Dfile=dist/jinput-natives-windows.zip" />
+			<arg value="-Dclassifier=natives-windows" />
+			<arg value="-Pgpg" />
+		</artifact:mvn>
+		<artifact:mvn>
+			<arg value="org.apache.maven.plugins:maven-gpg-plugin:1.1:sign-and-deploy-file" />
+			<arg value="-Durl=${maven-repository-url}" />
+			<arg value="-DrepositoryId=${maven-repository-id}" />
+			<arg value="-DpomFile=dist/jinput-${mvn.version}-natives.pom" />
+			<arg value="-Dfile=dist/jinput-natives-linux.zip" />
+			<arg value="-Dclassifier=natives-linux" />
+			<arg value="-Pgpg" />
+		</artifact:mvn>
+		<artifact:mvn>
+			<arg value="org.apache.maven.plugins:maven-gpg-plugin:1.1:sign-and-deploy-file" />
+			<arg value="-Durl=${maven-repository-url}" />
+			<arg value="-DrepositoryId=${maven-repository-id}" />
+			<arg value="-DpomFile=dist/jinput-${mvn.version}-natives.pom" />
+			<arg value="-Dfile=dist/jinput-natives-osx.zip" />
+			<arg value="-Dclassifier=natives-osx" />
 			<arg value="-Pgpg" />
 		</artifact:mvn>
 	</target>
