--- a/coreAPI/build.xml
+++ b/coreAPI/build.xml
@@ -23,11 +23,13 @@
     		 todir="build/src/java/net/java/games/input/" overwrite="true">
 			<filterset>
 				<filter token="BUILD_NUMBER" value="${build.number}"/>
+				<filter token="API_VERSION" value="${api.version}"/>
 			</filterset>
 		</copy>
 		<javac srcdir="build/src/java" destdir="classes" debug="true" deprecation="true" source="1.4" target="1.4">
 			<include name="net/**" />
 		</javac>
+    	<echo message="Build version class for ${api.version} build ${build.number}"/>
     </target>
 
     <target name="jar" depends="init,compile">
